--- a/app/src/main/res/layout/fragment_by_username.xml
+++ b/app/src/main/res/layout/fragment_by_username.xml
@@ -20,7 +20,7 @@
                 android:background="@drawable/edit_text"
                 android:textSize="15dp"
                 android:hint="Enter your friend’s username"
-                android:inputType="textPassword" />
+                android:inputType="text" />
 
 
         <LinearLayout
