--- a/app/src/main/res/layout/fragment_sign_up_selection.xml
+++ b/app/src/main/res/layout/fragment_sign_up_selection.xml
@@ -105,7 +105,7 @@
 
                 <View
                     android:layout_width="50dp"
-                    android:layout_height="2dp"
+                    android:layout_height="1dp"
                     android:layout_below="@+id/b"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="5dp"
@@ -121,7 +121,7 @@
 
                 <View
                     android:layout_width="50dp"
-                    android:layout_height="2dp"
+                    android:layout_height="1dp"
                     android:layout_below="@+id/b"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="5dp"
@@ -241,7 +241,7 @@ phone number, email or Facebook account"
                 android:textSize="15dp" />
 
             <LinearLayout
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <natuan.org.androiddesigntablayout.MyCustomTextView
