--- a/app/src/main/res/drawable/ic_tabbar_chat.xml
+++ b/app/src/main/res/drawable/ic_tabbar_chat.xml
@@ -6,29 +6,29 @@
         android:state_focused="false"
         android:state_selected="false"
         android:state_pressed="false"
-        android:drawable="@drawable/ic_chat_grey" />
+        android:drawable="@mipmap/ic_chat_grey" />
     <item
         android:left="2dp" android:right="4dp"
         android:state_focused="false"
         android:state_selected="true"
         android:state_pressed="false"
-        android:drawable="@drawable/ic_chat" />
+        android:drawable="@mipmap/ic_chat" />
     <!-- Focused states -->
     <item
         android:left="2dp" android:right="4dp"
         android:state_focused="true"
         android:state_selected="false"
         android:state_pressed="false"
-        android:drawable="@drawable/ic_chat" />
+        android:drawable="@mipmap/ic_chat" />
     <item
         android:left="2dp" android:right="4dp"
         android:state_focused="true"
         android:state_selected="true"
         android:state_pressed="false"
-        android:drawable="@drawable/ic_chat" />
+        android:drawable="@mipmap/ic_chat" />
     <!-- Pressed -->
     <item
         android:left="2dp" android:right="4dp"
         android:state_pressed="true"
-        android:drawable="@drawable/ic_chat" />
+        android:drawable="@mipmap/ic_chat" />
 </selector>
