--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,11 @@
                         android:layout_gravity="left|bottom"
                         android:orientation="vertical">
 
+                        <View
+                            android:background="#e6e5e8"
+                            android:layout_width="match_parent"
+                            android:layout_height="2dp"/>
+
                         <android.support.design.widget.TabLayout
                             android:layout_weight="1"
                             android:id="@+id/tabs"
