--- a/app/src/main/res/layout/dialog_favortie.xml
+++ b/app/src/main/res/layout/dialog_favortie.xml
@@ -41,7 +41,7 @@
                     android:layout_marginLeft="5dp"
                     android:text="Favortie"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="#000" />
+                    android:textColor="#bfbfbf" />
 
             </LinearLayout>
 
