--- a/app/src/main/res/layout/dialog_me.xml
+++ b/app/src/main/res/layout/dialog_me.xml
@@ -35,7 +35,7 @@
                 android:layout_marginLeft="5dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Me"
-                android:textColor="#000"
+                android:textColor="#bfbfbf"
                 android:id="@+id/textView20"
                 android:layout_gravity="center_vertical" />
 
