--- a/app/src/main/res/layout/fragment_friends_by_phone.xml
+++ b/app/src/main/res/layout/fragment_friends_by_phone.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Enter your friend’s phone number"
-                android:inputType="textPassword" />
+                android:inputType="text" />
 
 
 
