--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:hint="Email address*"
+            android:hint="Email or Phone Number*"
             android:inputType="textEmailAddress"
             android:textColor="#bfbfbf"
             android:textColorHint="#bfbfbf"
