--- a/app/src/main/res/layout/item_recent_chats.xml
+++ b/app/src/main/res/layout/item_recent_chats.xml
@@ -32,7 +32,7 @@
         android:text="Rihanna Love the way lie"
         android:textColor="#252525"
         android:typeface="sans"
-        android:textSize="15dip"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:textStyle="bold"
         android:layout_gravity="center" />
 
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
         android:textColor="#9e9e9e"
-        android:textSize="10dip"
+        android:textSize="14dp"
         android:layout_marginTop="1dip"
         android:layout_toRightOf="@+id/thumbnail"
         android:text="Just gona stand there and ..."
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:gravity="right"
         android:text="5:45"
-        android:textSize="10dip"
+        android:textSize="14dp"
         android:textColor="#9e9e9e"
         android:textStyle="bold"
         android:layout_gravity="right"
