--- a/app/src/main/res/menu/menu_main_recent_chat.xml
+++ b/app/src/main/res/menu/menu_main_recent_chat.xml
@@ -4,12 +4,12 @@
     tools:context=".MainActivity">
 
 
-    <item
-        android:id="@+id/action_add"
-        android:icon="@drawable/cancel"
-        android:orderInCategory="100"
-        android:title=""
-        app:showAsAction="ifRoom" />
+    <!--<item-->
+        <!--android:id="@+id/action_add"-->
+        <!--android:icon="@drawable/ic_chat_colse"-->
+        <!--android:orderInCategory="100"-->
+        <!--android:title=""-->
+        <!--app:showAsAction="ifRoom" />-->
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_more_search_invite"
